--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,27 +32,22 @@ jobs:
           path: |
             build/DptOIE.zip
           retention-days: 1
-
   release:
     needs: build
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: build
-      - name: Create release
-        uses: marvinpinto/action-automatic-releases@latest
+      - name: Release
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: true
-          automatic_release_tag: "latest"
-          title: "DptOIE latest"
           files: |
             DptOIE.zip
-
   ceten-200:
     needs: build
     runs-on: ubuntu-latest
